--- a/.github/workflows/stethoscope.yml
+++ b/.github/workflows/stethoscope.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
       - name: Update data using Stethoscope
         uses: stethoscope-js/action@master
         env:
