--- a/.stethoscoperc.yml
+++ b/.stethoscoperc.yml
@@ -11,9 +11,9 @@ integrations:
   # spotify:
   #   frequency: "daily"
   #   all: true
-  # google-fit:
-  #   frequency: "daily"
-  #   all: false
+  google-fit:
+    frequency: "daily"
+    all: false
   goodreads:
     frequency: "daily"
     all: true
